Add translations for help and join, claim, disconnect

--- a/src/main/resources/i18n/strings_en.properties
+++ b/src/main/resources/i18n/strings_en.properties
@@ -1,1 +1,13 @@
-joinGame=Join a game
+help.claimGame=Claim God of a godless Game😇
+help.help=HELP
+help.helpText=prints this message
+help.joinGame=Join a game
+help.new=Start a new game
+help.start=Start an interactive chat
+youAreAlreadyPlaying=You are in the middle of game
+youAreNotPlaying=You are not playing yet
+disconnectFromThis=Disconnect from this Game
+disconnectFromCurrentGame=Disconnect from the current game
+disconnectedFromGame=Disconnected from game
+disconnect=Disconnect
+addPlayer=Disconnect
