--- a/src/main/resources/i18n/strings_fa.properties
+++ b/src/main/resources/i18n/strings_fa.properties
@@ -1,1 +1,12 @@
-joinGame=پیوستن به یک بازی
+help.claimGame=😇خدای یک بازی بدون خدا شو
+help.help=کمک
+help.helpText=نمایش همین پیام
+help.joinGame=پیوستن به یک بازی
+help.new=آغاز یک بازی جدید
+help.start=آغاز تعامل با من
+youAreAlreadyPlaying=وسط این بازی هستی
+youAreNotPlaying=در حال بازی کردن نیستی
+disconnectFromThis=جدا شدن از بازی
+disconnectFromCurrentGame=جدا شدن از بازی
+disconnectedFromGame=از این بازی جدا شدی
+disconnect=جدا شدن از بازی
