Almost all localized (minus errors)

--- a/src/main/resources/i18n/strings_en.properties
+++ b/src/main/resources/i18n/strings_en.properties
@@ -10,4 +10,16 @@ disconnectFromThis=Disconnect from this Game
 disconnectFromCurrentGame=Disconnect from the current game
 disconnectedFromGame=Disconnected from game
 disconnect=Disconnect
-addPlayer=Disconnect
+addPlayer=Add a (fake) player
+ccInstructions=How many of these characters? Tap on a button to increase\nHit RANDOMIZE button when all set\nEnter new Characters to add to the list
+cancel=CANCEL
+selectOrEnterGame=Select or enter a game.
+randomize=RANDOMIZE
+CCAndRandomize=Count Characters and Randomize
+newGameInit=A new game has been initialized.
+addFakePlayerInstructions=Enter players name (for adding multiple players at once, separate them by comma[,])
+chooseAnOption=Choose one of the options below:
+failedToRandomize=Failed to randomize characters.
+citizen=Citizen
+youAreNowA=You are now a
+structureOfGame=The structure of the game:
