Configurable default values

--- a/src/main/resources/i18n/strings_fa.properties
+++ b/src/main/resources/i18n/strings_fa.properties
@@ -23,4 +23,5 @@ failedToRandomize=خطا در ایفای نقوش
 citizen=شهروند
 youAreNowA=نقش شما:
 structureOfGame=ساختار بازی:
+defaultChars=پدرخوانده, دکتر, رویین‌تن, تک تیر انداز
 
