--- a/src/main/resources/i18n/strings_en.properties
+++ b/src/main/resources/i18n/strings_en.properties
@@ -23,3 +23,4 @@ failedToRandomize=Failed to randomize characters.
 citizen=Citizen
 youAreNowA=You are now a
 structureOfGame=The structure of the game:
+defaultChars=Mafia, God father, Doctor, Armour, Sniper
