--- a/src/main/resources/i18n/strings_fa.properties
+++ b/src/main/resources/i18n/strings_fa.properties
@@ -10,18 +10,18 @@ disconnectFromThis=جدا شدن از بازی
 disconnectFromCurrentGame=جدا شدن از بازی
 disconnectedFromGame=از این بازی جدا شدی
 disconnect=جدا شدن از بازی
-addPlayer=افزودن یک بازی کن
+addPlayer=افزودن یک یا چند بازیکن
 ccInstructions= چند تا از کدوم نقش؟\nبرای افزایش تعداد روی نقش یزن\nدر آخر دکمه «نقش بندی» را بزن\nاگر نقش دیگری در نظر داری، تایپ کن و بفرست
 cancel=کنسل
 selectOrEnterGame=کد یک بازی را وارد کن یا یک بازی را انتخاب کن
 randomize=نقش بندی
 CCAndRandomize=ایجاد و نگاشت نقش‌های بازی
 newGameInit=یک بازی جدید خلق شد.
-addFakePlayerInstructions=نام بازی کن را وارد کن. (برای افزودن جند بازیکن، از کاما [,] در بین نام‌ها استفاده کن)
+addFakePlayerInstructions=نام بازی کن را وارد کن. (برای افزودن جند بازیکن، از کاما [,،] در بین نام‌ها استفاده کن)
 chooseAnOption=یک گزینه را انتخاب کن:
 failedToRandomize=خطا در ایفای نقوش
 citizen=شهروند
 youAreNowA=نقش شما:
 structureOfGame=ساختار بازی:
-defaultChars=پدرخوانده, دکتر, رویین‌تن, تک تیر انداز
+defaultChars=مافیا, پدرخوانده, دکتر, رویین‌تن, تک تیر انداز
 
